--- a/config.ini.example
+++ b/config.ini.example
@@ -1,4 +1,4 @@
 ;https://www.php.net/manual/en/function.parse-ini-file.php
 [redcap-settings]
-api-url = http://web
+api-url = http://web/api
 api-token = foo
