making changes to config for local testing

--- a/cups-config/printers.conf
+++ b/cups-config/printers.conf
@@ -47,3 +47,23 @@ Attribute marker-names Toner,Waste Toner
 Attribute marker-types toner,waste-toner
 Attribute marker-change-time 1616617296
 </Printer>
+<Printer Virtual_PDF_Printer>
+PrinterId 3
+UUID urn:uuid:f61be790-b9ac-35fb-68b2-b226ff007caa
+Info Virtual PDF Printer
+Location
+MakeModel Ricoh IM 350 PDF
+DeviceURI cups-pdf:/
+State Idle
+StateTime 1625772798
+ConfigTime 1625772807
+Type 4308
+Accepting Yes
+Shared No
+JobSheets none none
+QuotaPeriod 0
+PageLimit 0
+KLimit 0
+OpPolicy default
+ErrorPolicy retry-job
+</Printer>
